--- a/updated web.html
+++ b/updated web.html
@@ -340,7 +340,7 @@ loadGallery();
 // ========== ADMIN LOGIN ==========
 function checkAdmin(){
 const pass=document.getElementById('adminPass').value;
-if(pass==='arebian2025'){
+if(pass==='nobody112'){
 document.getElementById('admin-login').style.display='none';
 document.getElementById('admin-panel').style.display='block';
 }else{
